fix image overlapping banner

--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ article {
   rgba(255, 255, 255, 0) 100%);
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.1),
   inset 0 0 1px rgba(255, 255, 255, 0.6); 
+  margin-top: 110px;
 }
 
 /*PICTURES*/
